# omni-zero-image

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: omnizero-base.json  omnizero-tiny.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPARISON.md  COMPLETION_AUDIT.md  MODEL_CARD.md  REMOTE_TESTING.md  ROADMAP.md  VALIDATION.md
examples/: README.md  prompts.jsonl
src/omni_zero/: __init__.py  benchmark.py  checkpoint.py  cli.py  config.py  data.py  distill.py  draft.py  export_onnx.py  image_io.py  model.py  sampler.py  tokenizer.py  train.py
tests/: test_cli.py  test_draft.py  test_model_contract.py  test_sampler_contract.py  test_tokenizer.py
workflow-templates/: ci.yml  samples.yml
