[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omni-zero-image"
version = "0.1.0"
description = "Open research prototype for ultra-low-cost text-to-image and image-to-image generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fab" }]
keywords = ["image-generation", "diffusion", "flow-matching", "text-to-image", "image-editing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "pillow>=10.0",
]

[project.optional-dependencies]
torch = [
  "torch>=2.2",
]
train = [
  "safetensors>=0.4.2",
  "tqdm>=4.66",
]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[project.scripts]
omnizero = "omni_zero.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

